# sdk-python-framework

./: .gitignore  CHANGELOG.md  CONTRACT.md  README.md  RELEASING.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-release.yml  ci.yml  dependabot-automerge.yml  publish.yml  release.yml
examples/: basic_usage.py
hotdata_core_notebook/: __init__.py  client.py  env.py  health.py  result.py
hotdata_framework/: __init__.py  client.py  databases.py  errors.py  health.py  managed_client.py
hotdata_runtime/: __init__.py  client.py  databases.py  env.py  errors.py  health.py  http.py  managed_client.py  result.py
scripts/: check-release.py  extract-changelog.py  publish-workflow.sh  release.sh  update_changelog.py
tests/: test_client.py  test_contract.py  test_databases.py  test_errors.py  test_health.py  test_managed_client.py  test_request_timeout.py  test_result.py  test_update_changelog.py  test_version.py
