[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotdata-runtime"
version = "0.2.4"
description = "Workspace/session runtime primitives for Hotdata integrations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "hotdata>=0.2.5",
  "pandas>=2.0",
]

[dependency-groups]
dev = [
  "packaging>=23",
  "pytest>=8.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["hotdata_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
