[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotdata-runtime"
version = "0.3.0"
description = "Workspace/session runtime primitives for Hotdata integrations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "hotdata>=0.4.1",
  "pandas>=2.0",
  "pyarrow>=14.0",
]

[dependency-groups]
dev = [
  "packaging>=23",
  "pytest>=8.0",
  "mypy>=1.11",
  "ruff>=0.5",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["hotdata_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
files = [
  "hotdata_runtime",
  "tests",
]
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
allow_untyped_globals = false
implicit_reexport = false
implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
strict_bytes = true
extra_checks = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "C4", "DTZ", "T20", "RET", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["T201"]
"scripts/**/*.py" = ["T201", "E501"]
"tests/**/*.py" = ["N806", "N814"]
