[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotdata-framework"
version = "0.6.2"
description = "Python framework for building Hotdata integrations: workspace/session runtime, query execution, and managed databases"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["hotdata", "python", "framework", "sql", "data", "analytics", "pandas", "arrow"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "hotdata>=0.6.0",
  "pandas>=2.0",
  "pyarrow>=14.0",
]

[project.urls]
Homepage = "https://www.hotdata.dev"
Documentation = "https://www.hotdata.dev/docs"
Repository = "https://github.com/hotdata-dev/sdk-python-framework"

[dependency-groups]
dev = [
  "packaging>=23",
  "pytest>=8.0",
  "mypy>=1.11",
  "ruff>=0.5",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["hotdata_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
files = [
  "hotdata_framework",
  "tests",
]
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
allow_untyped_globals = false
implicit_reexport = false
implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
strict_bytes = true
extra_checks = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "C4", "DTZ", "T20", "RET", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["T201"]
"scripts/**/*.py" = ["T201", "E501"]
"tests/**/*.py" = ["N806", "N814"]
